vcl/osx/salnativewidgets.cxx
@@ -44,45 +44,6 @@
 
 #endif
 
-class AquaBlinker : public Timer
-{
-    AquaSalFrame*       mpFrame;
-    tools::Rectangle           maInvalidateRect;
-
-    AquaBlinker( AquaSalFrame* pFrame, const tools::Rectangle& rRect )
-        : Timer( "AquaBlinker" )
-        , mpFrame( pFrame )
-        , maInvalidateRect( rRect )
-    {
-        mpFrame->maBlinkers.push_back( this );
-    }
-
-public:
-    static void Blink( AquaSalFrame*, const tools::Rectangle&, int nTimeout = 80 );
-
-    virtual void Invoke() override
-    {
-        if( AquaSalFrame::isAlive( mpFrame ) && mpFrame->mbShown )
-        {
-            mpFrame->maBlinkers.remove( this );
-            mpFrame->SendPaintEvent( &maInvalidateRect );
-        }
-        delete this;
-    }
-};
-
-void AquaBlinker::Blink( AquaSalFrame* pFrame, const tools::Rectangle& rRect, int nTimeout )
-{
-    // prevent repeated paints from triggering themselves all the time
-    auto isRepeated = std::any_of(pFrame->maBlinkers.begin(), pFrame->maBlinkers.end(),
-        [&rRect](AquaBlinker* pBlinker) { return pBlinker->maInvalidateRect == rRect; });
-    if( isRepeated )
-        return;
-    AquaBlinker* pNew = new AquaBlinker( pFrame, rRect );
-    pNew->SetTimeout( nTimeout );
-    pNew->Start();
-}
-
 // Helper returns an HIRect
 
 static HIRect ImplGetHIRectFromRectangle(tools::Rectangle aRect)
@@ -514,13 +475,6 @@ bool AquaSalGraphics::drawNativeControl(ControlType nType,
                 // avoid clipping when focused
                 rc.origin.x += FOCUS_RING_WIDTH/2;
                 rc.size.width -= FOCUS_RING_WIDTH;
-
-                if( nState & ControlState::DEFAULT )
-                {
-                    AquaBlinker::Blink( mpFrame, buttonRect );
-                    // show correct animation phase
-                    aPushInfo.animation.time.current = CFAbsoluteTimeGetCurrent();
-                }
             }
             else
                 aPushInfo.kind = kThemeBevelButton;
